<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Length_Calculate_Activity"
    android:background="@drawable/background_2">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Time_value_input"
        android:background="#50ffffff"
        android:hint="@string/enter_a_value"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/convert_minutes_to_seconds"
        android:onClick="minutes_to_seconds"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/convert_years_to_months"
        android:onClick="years_to_months"/>

</LinearLayout>
