<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".HomePageActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Sign_in"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:layout_margin="30dp"
        android:textSize="40sp"
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Username"
        android:background="#50ffffff"
        android:layout_below="@+id/Sign_in"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:background="#50ffffff"
        android:layout_below="@+id/Username"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_open_24"
        android:drawablePadding="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_below="@id/Password"
        android:backgroundTint="@color/purple_500"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:onClick="start"/>


</RelativeLayout>
