<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_the_unit_converter"
            android:id="@+id/main_page_welcome_message"
            android:gravity="center"
            android:textSize="20sp"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_the_type_of_unit_you_want_to_convert"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_scale_black_48"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="20dp"
                    android:id="@+id/mass_button"
                    android:layout_height="wrap_content"
                    android:text="@string/mass"
                    android:layout_gravity="center"
                    android:onClick="clickMass"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_straighten_black_48" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="20dp"
                    android:id="@+id/Length_button"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:onClick="clickLength"
                    android:layout_gravity="center"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_thermostat_black_48" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="20dp"
                    android:id="@+id/Temperature_button"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:layout_gravity="center"
                    android:onClick="clickTemperature"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/baseline_schedule_black_48" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="20dp"
                    android:id="@+id/time_button"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:layout_gravity="center"
                    android:onClick="clickTime"/>

            </TableRow>

        </TableLayout>

    </ScrollView>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="20dp"
            android:id="@+id/settings_button"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="center"
            android:onClick="clickSettings"/>

    </TableRow>

</TableLayout>
